Init containers for migration

--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -23,6 +23,15 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      initContainers:
+        - name: init-migration
+          image: {{ .Values.kubectlImage }}
+          command:
+            - "kubectl"
+            - "wait"
+            - "job/{{ include "dependabot-gitlab.fullname" . }}-migration-job"
+            - "--for=condition=complete"
+            - "--timeout={{ .Values.migrationJob.activeDeadlineSeconds }}s"
       containers:
         - name: {{ .Chart.Name }}-worker
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
