--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -30,12 +30,15 @@ spec:
             - "kubectl"
             - "wait"
             - "job/{{ include "dependabot-gitlab.fullname" . }}-migration-job"
+            - "--namespace"
+            - "{{ .Release.Namespace }}"
             - "--for=condition=complete"
             - "--timeout={{ .Values.migrationJob.activeDeadlineSeconds }}s"
       containers:
         - name: {{ .Chart.Name }}-worker
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
-          args: ["sidekiq"]
+          args:
+            - "sidekiq"
           {{- with (include "dependabot-gitlab.database-credentials" .) }}
           env:
             {{- . | nindent 12 }}
