--- a/charts/dependabot-gitlab/templates/serviceaccount.yaml
+++ b/charts/dependabot-gitlab/templates/serviceaccount.yaml
@@ -1,12 +1,11 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "dependabot-gitlab.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end }}
