Extract migration waiter and add limits

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -16,3 +16,7 @@ projects:
 
 env:
   gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
+
+createProjectsJob:
+  backoffLimit: 10
+  activeDeadlineSeconds: 240
