--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -24,16 +24,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       initContainers:
-        - name: init-migration
-          image: {{ .Values.kubectlImage }}
-          command:
-            - "kubectl"
-            - "wait"
-            - "job/{{ include "dependabot-gitlab.fullname" . }}-migration-job"
-            - "--namespace"
-            - "{{ .Release.Namespace }}"
-            - "--for=condition=complete"
-            - "--timeout={{ .Values.migrationJob.activeDeadlineSeconds }}s"
+        {{- include "dependabot-gitlab.migrationsWaitContainer" . | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}-worker
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
