--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -6,14 +6,20 @@ image:
   # -- Image tag
   tag: ""
 
+kubectlImage:
+  # -- Image to use for kubectl init containers
+  repository: bitnami/kubectl
+  # -- Image pull policy
+  pullPolicy: IfNotPresent
+  # -- Image tag
+  tag: "1.20.10"
+
 # -- Override chart name
 nameOverride: ""
 # -- Override fully qualified app name
 fullnameOverride: ""
 
 serviceAccount:
-  # -- Create service account
-  create: false
   # -- Service account annotations
   annotations: {}
   # -- Service account name
@@ -61,12 +67,12 @@ web:
   livenessProbe:
     # -- Enable liveness probe
     enabled: true
-    # -- Liveness probe failure thresold
+    # -- Liveness probe failure threshold
     failureThreshold: 5
     # -- Liveness probe period
     periodSeconds: 10
     # -- Liveness probe timeout
-    timeoutSeconds: 1
+    timeoutSeconds: 2
   startupProbe:
     # -- Enable startup probe
     enabled: true
@@ -106,10 +112,16 @@ worker:
     timeoutSeconds: 3
 
 createProjectsJob:
-  # -- Job Backoff Limit
-  backoffLimit: 2
+  # -- Job Back off limit
+  backoffLimit: 4
   # -- Job Active Deadline
-  activeDeadlineSeconds: 30
+  activeDeadlineSeconds: 240
+
+migrationJob:
+  # -- Job Back off limit
+  backoffLimit: 4
+  # -- Job Active Deadline
+  activeDeadlineSeconds: 180
 
 env:
   # -- Redis URL
