--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -15,9 +15,11 @@ data:
   {{- if and (not .Values.redis.enabled) .Values.redis.auth.enabled }}
   REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password | b64enc | quote }}
   {{- end }}
-  {{- if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
-  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password | b64enc | quote }}
-  {{- end }}
+  {{- if and (not .Values.mongodb.enabled) .Values.mongodb.uri }}
+  MONGODB_URI: {{ .Values.mongodb.uri | b64enc | quote }}
+  {{- else if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
+  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password | b64enc | quote }}  
+  {{- end -}}
   {{- range $key, $val := .Values.registriesCredentials }}
   {{ $key }}: {{ $val | b64enc | quote }}
   {{- end}}
