--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -126,6 +126,8 @@ env:
   redisUrl: ""
   # -- MongoDB URL
   mongoDbUrl: ""
+  # -- URI string for connection to mongodb. Cluster installation must be disabled
+  mongoDbUri: ""
   # -- Gitlab instance URL
   gitlabUrl: https://gitlab.com
   # -- Optional sentry dsn for error reporting
@@ -184,8 +186,6 @@ redis:
 
 # ref: https://github.com/bitnami/charts/tree/master/bitnami/mongodb
 mongodb:
-  # -- URI string for connection to mongodb. Cluster installation must be disabled
-  uri: ""
   # -- Enable mongodb installation
   enabled: true
   # -- String to fully override mongodb.fullname template
