--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -15,9 +15,13 @@ data:
   {{- if and (not .Values.redis.enabled) .Values.redis.auth.enabled }}
   REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password | b64enc | quote }}
   {{- end }}
-  {{- if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
-  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password | b64enc | quote }}
+  {{- if and .Values.mongodb.enabled .Values.env.mongoDbUri }}
+  {{- fail "MongoDB URI should not be used with enabled mongodb installation" }}
+  {{- else if .Values.env.mongoDbUri }}
+  MONGODB_URI: {{ .Values.env.mongoDbUri | b64enc | quote }}
+  {{- else if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
+  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password | b64enc | quote }}  
   {{- end }}
   {{- range $key, $val := .Values.registriesCredentials }}
   {{ $key }}: {{ $val | b64enc | quote }}
-  {{- end}}
+  {{- end }}
