--- a/.github/ct-lint.yaml
+++ b/.github/ct-lint.yaml
@@ -1,3 +1,3 @@
 validate-maintainers: false
 chart-repos:
-  - redis=https://charts.bitnami.com/bitnami
+  - bitnami=https://charts.bitnami.com/bitnami
