--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ on:
       - script/**/*
 
 env:
-  KUBEVAL_VERSION: "0.15.0"
-  HELMDOCS_VERSION: "1.4.0"
+  KUBEVAL_VERSION: "0.16.1"
+  HELMDOCS_VERSION: "1.5.0"
 
 jobs:
   lint:
@@ -30,7 +30,7 @@ jobs:
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.1.0
       - name: Lint
-        run: ct lint --config .github/ct-lint.yaml
+        run: ct lint --config .github/ct-lint.yaml --check-version-increment=false
       - name: Lint docs
         run: .github/script/helm-docs.sh
 
@@ -76,26 +76,3 @@ jobs:
       - name: Install
         if: steps.changes.outputs.changed == 'true'
         run: ct install --config .github/ct-install.yaml
-
-  release:
-    if: github.event_name == 'push'
-    runs-on: ubuntu-20.04
-    needs:
-      - lint
-      - kubeval
-      - install
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-        with:
-          fetch-depth: 0
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Install Helm
-        uses: azure/setup-helm@v1.1
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
