--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -16,3 +16,7 @@ projects:
 
 env:
   gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
+
+image:
+  repository: registry.gitlab.com/dependabot-gitlab/dependabot
+  tag: improvement-sidekiq-alive-e039fe19
