--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -9,6 +9,11 @@ data:
   SETTINGS__GITLAB_URL: {{ .Values.env.gitlabUrl | quote }}
   SETTINGS__METRICS: {{ .Values.env.metrics | quote }}
   SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | toString | quote }}
+  {{- if or .Values.worker.livenessProbe.enabled .Values.worker.startupProbe.enabled }}
+  SIDEKIQ_ALIVE_PORT: {{ .Values.worker.probePort }}
+  {{- else }}
+  DISABLE_SIDEKIQ_ALIVE: "true"
+  {{- end }}
   {{- if .Values.env.dependabotUrl }}
   SETTINGS__DEPENDABOT_URL: {{ .Values.env.dependabotUrl | quote }}
   {{- end }}
