--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -44,7 +44,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /healthcheck
-              port: 7433
+              port: {{ .Values.worker.probePort }}
             failureThreshold: {{ .Values.worker.livenessProbe.failureThreshold }}
             periodSeconds: {{ .Values.worker.livenessProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.worker.livenessProbe.timeoutSeconds }}
@@ -53,7 +53,7 @@ spec:
           startupProbe:
             httpGet:
               path: /healthcheck
-              port: 7433
+              port: {{ .Values.worker.probePort }}
             failureThreshold: {{ .Values.worker.startupProbe.failureThreshold }}
             periodSeconds: {{ .Values.worker.startupProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.worker.startupProbe.timeoutSeconds }}
