--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -16,6 +16,7 @@ projects:
 
 env:
   gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
+  logLevel: "debug"
 
 image:
   repository: registry.gitlab.com/dependabot-gitlab/dependabot
