use http probes for worker container (#84)
* use http probes for worker container

* test with branch image

* fix kubeval download link

* enable sidekiq alive conditionally

* set port to string

* add log level value

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -16,3 +16,8 @@ projects:
 
 env:
   gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
+  logLevel: "debug"
+
+image:
+  repository: registry.gitlab.com/dependabot-gitlab/dependabot
+  tag: improvement-sidekiq-alive-e039fe19
