--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -90,6 +90,8 @@ worker:
   replicaCount: 1
   # -- Worker container resource definitions
   resources: {}
+  # Health check probe port
+  probePort: 7433
   livenessProbe:
     # -- Enable liveness probe
     enabled: true
@@ -144,6 +146,8 @@ env:
   updateRetry: 2
   # -- Enable metrics endpoint for prometheus
   metrics: true
+  # -- App log level
+  logLevel: "info"
   # -- Enable upstream https proxy
   https_proxy: ""
   # -- Enable upstream http proxy
