--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -119,6 +119,22 @@ worker:
     # -- Startup probe timeout
     timeoutSeconds: 3
 
+  serviceMonitor:
+    enabled: true
+    additionalLabels: {}
+    # The label to use to retrieve the job name from.
+    # jobLabel: "app.kubernetes.io/name"
+    namespace: ""
+    namespaceSelector: {}
+    # Default: scrape .Release.Namespace only
+    # To scrape all, use the following:
+    # namespaceSelector:
+    #   any: true
+    scrapeInterval: 30s
+    # honorLabels: true
+    targetLabels: []
+    metricRelabelings: []
+
 createProjectsJob:
   # -- Job Active Deadline
   activeDeadlineSeconds: 240
@@ -128,6 +144,9 @@ migrationJob:
   backoffLimit: 4
   # -- Job Active Deadline
   activeDeadlineSeconds: 180
+
+
+
 
 env:
   # -- Redis URL
