fix ci image tag

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -20,4 +20,4 @@ env:
 
 image:
   repository: registry.gitlab.com/dependabot-gitlab/dependabot
-  tag: improvement-sidekiq-alive-e039fe19
+  tag: master-latest
