--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -31,8 +31,21 @@ spec:
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
           args:
             - "sidekiq"
-          {{- with (include "dependabot-gitlab.database-credentials" .) }}
           env:
+          {{- if or .Values.worker.livenessProbe.enabled .Values.worker.startupProbe.enabled }}
+            - name: SIDEKIQ_ALIVE_PORT
+              value: {{ .Values.worker.probePort | quote }}
+          {{- else }}
+            - name: DISABLE_SIDEKIQ_ALIVE
+              value: "true"
+          {{- end }}
+          {{- if .Values.metrics.enabled }}
+            - name: PROMETHEUS_EXPORTER_LOG_REQUESTS
+              value: "false"
+            - name: PROMETHEUS_EXPORTER_PORT
+              value: {{ .Values.metrics.workerPort | quote }}
+          {{- end }}
+          {{- with (include "dependabot-gitlab.database-credentials" .) }}
             {{- . | nindent 12 }}
           {{- end }}
           envFrom:
@@ -40,6 +53,12 @@ spec:
                 name: {{ include "dependabot-gitlab.fullname" . }}
             - secretRef:
                 name: {{ include "dependabot-gitlab.fullname" . }}
+          {{- if .Values.env.metrics }}
+          ports:
+            - name: metrics
+              containerPort: {{ .Values.worker.metricsPort }}
+              protocol: TCP
+          {{- end }}
           {{- if .Values.worker.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
