--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -56,7 +56,7 @@ spec:
           {{- if .Values.env.metrics }}
           ports:
             - name: metrics
-              containerPort: {{ .Values.worker.metricsPort }}
+              containerPort: {{ .Values.metrics.workerPort }}
               protocol: TCP
           {{- end }}
           {{- if .Values.worker.livenessProbe.enabled }}
