log metrics requests with debug level

--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -41,7 +41,11 @@ spec:
           {{- end }}
           {{- if .Values.metrics.enabled }}
             - name: PROMETHEUS_EXPORTER_LOG_REQUESTS
+              {{- if eq .Values.env.logLevel "debug" }}
+              value: "true"
+              {{- else }}
               value: "false"
+              {{- end }}
             - name: PROMETHEUS_EXPORTER_PORT
               value: {{ .Values.metrics.workerPort | quote }}
           {{- end }}
